--- a/12_Advanced_Python_Modules/Math and Random.ipynb
+++ b/12_Advanced_Python_Modules/Math and Random.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import datetime"
+    "# Math Module"
    ]
   },
   {
@@ -15,47 +15,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_time = datetime.time(2, 20)"
+    "import math"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "20"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "my_time.minute"
+    "# help(math)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "my_time.hour"
+    "value = 4.35"
    ]
   },
   {
@@ -64,15 +42,18 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "02:20:00\n"
-     ]
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(my_time)"
+    "math.floor(value)"
    ]
   },
   {
@@ -83,7 +64,7 @@
     {
      "data": {
       "text/plain": [
-       "0"
+       "5"
       ]
      },
      "execution_count": 6,
@@ -92,16 +73,47 @@
     }
    ],
    "source": [
-    "my_time.microsecond"
+    "math.ceil(value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "round(4.35)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "mytime = datetime.time(13, 20, 1, 20)"
+    "round(4.5)"
    ]
   },
   {
@@ -112,7 +124,7 @@
     {
      "data": {
       "text/plain": [
-       "13"
+       "3.141592653589793"
       ]
      },
      "execution_count": 9,
@@ -121,27 +133,16 @@
     }
    ],
    "source": [
-    "mytime.hour"
+    "math.pi"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "20"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "mytime.minute"
+    "from math import pi"
    ]
   },
   {
@@ -152,7 +153,7 @@
     {
      "data": {
       "text/plain": [
-       "1"
+       "3.141592653589793"
       ]
      },
      "execution_count": 11,
@@ -161,7 +162,7 @@
     }
    ],
    "source": [
-    "mytime.second"
+    "pi"
    ]
   },
   {
@@ -172,7 +173,7 @@
     {
      "data": {
       "text/plain": [
-       "20"
+       "2.718281828459045"
       ]
      },
      "execution_count": 12,
@@ -181,7 +182,7 @@
     }
    ],
    "source": [
-    "mytime.microsecond"
+    "math.e"
    ]
   },
   {
@@ -190,15 +191,38 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "13:20:01.000020\n"
-     ]
+     "data": {
+      "text/plain": [
+       "inf"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(mytime)"
+    "math.inf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "nan"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "math.nan"
    ]
   },
   {
@@ -209,7 +233,7 @@
     {
      "data": {
       "text/plain": [
-       "datetime.time"
+       "1.0"
       ]
      },
      "execution_count": 15,
@@ -218,53 +242,45 @@
     }
    ],
    "source": [
-    "type(mytime)"
+    "math.log(math.e)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.0"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "today = datetime.date.today()"
+    "math.log(100, 10)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2021-03-29\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(today)"
+    "# Random Module"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2021"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "today.year"
+    "import random"
    ]
   },
   {
@@ -275,7 +291,7 @@
     {
      "data": {
       "text/plain": [
-       "3"
+       "65"
       ]
      },
      "execution_count": 19,
@@ -284,7 +300,7 @@
     }
    ],
    "source": [
-    "today.month"
+    "random.randint(0, 100)"
    ]
   },
   {
@@ -295,7 +311,7 @@
     {
      "data": {
       "text/plain": [
-       "29"
+       "74"
       ]
      },
      "execution_count": 20,
@@ -304,7 +320,9 @@
     }
    ],
    "source": [
-    "today.day"
+    "random.seed(101)\n",
+    "\n",
+    "random.randint(0, 100)"
    ]
   },
   {
@@ -313,18 +331,24 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'Mon Mar 29 00:00:00 2021'"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "74\n",
+      "24\n",
+      "69\n",
+      "45\n",
+      "59\n"
+     ]
     }
    ],
    "source": [
-    "today.ctime()"
+    "random.seed(101)\n",
+    "print(random.randint(0, 100))\n",
+    "print(random.randint(0, 100))\n",
+    "print(random.randint(0, 100))\n",
+    "print(random.randint(0, 100))\n",
+    "print(random.randint(0, 100))"
    ]
   },
   {
@@ -333,7 +357,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from datetime import datetime"
+    "mylist = list(range(0, 20))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mylist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "random.choice(mylist)"
    ]
   },
   {
@@ -342,7 +406,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mydatetime = datetime(2021, 10, 3, 14, 20, 1)"
+    "# sample with replacement"
    ]
   },
   {
@@ -351,189 +415,116 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2021-10-03 14:20:01\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[13, 4, 4, 5, 13, 4, 19, 1, 3, 1]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(mydatetime)"
+    "random.choices(population = mylist, k = 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[17, 11, 6, 15, 10, 3, 16, 12, 19, 18]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# sample without replacement\n",
+    "random.sample(population = mylist, k = 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "random.shuffle(mylist)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "mydatetime = mydatetime.replace(year = 2020)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2020-10-03 14:20:01\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[18, 8, 0, 11, 17, 16, 7, 19, 4, 5, 12, 15, 10, 1, 3, 9, 14, 13, 2, 6]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(mydatetime)"
+    "mylist"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "41.84355661758675"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from datetime import date"
+    "random.uniform(a = 0, b = 100)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "date1 = date(2021, 11, 3)\n",
-    "date2 = date(2020, 11, 3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "result = date1 - date2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "datetime.timedelta"
+       "0.4842611842078838"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(result)"
+    "random.gauss(mu = 0, sigma = 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "365"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "result.days"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "datetime1 = datetime(2021, 11, 3, 22, 0)\n",
-    "datetime2 = datetime(2020, 11, 3, 12, 0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "datetime.timedelta(days=365, seconds=36000)"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "datetime1 - datetime2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mydif = datetime1 - datetime2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "36000"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mydif.seconds"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "31572000.0"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mydif.total_seconds()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
