--- a/08_Errors_and_Exceptions/Errors and Exceptions Handling.ipynb
+++ b/08_Errors_and_Exceptions/Errors and Exceptions Handling.ipynb
@@ -77,18 +77,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "'break' outside loop (<ipython-input-7-6426c9309b56>, line 11)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-7-6426c9309b56>\"\u001b[1;36m, line \u001b[1;32m11\u001b[0m\n\u001b[1;33m    break\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m 'break' outside loop\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "try:\n",
     "    result = 10 + 10\n",
@@ -126,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,9 +125,8 @@
     "    while True:\n",
     "        try:\n",
     "            result = int(input(\"Please provide any number: \"))\n",
-    "        except:\n",
-    "            print(\"That's not a number\")\n",
-    "            continue\n",
+    "        except ValueError:\n",
+    "            print (\"That's not a number\")\n",
     "        else:\n",
     "            print(\"Yes! Thank you!\")\n",
     "            break\n",
@@ -146,12 +136,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please provide any number: asdf\n",
+      "That's not a number\n",
+      "Game Over\n",
+      "Please provide any number: asf\n",
+      "That's not a number\n",
+      "Game Over\n",
+      "Please provide any number: 10\n",
+      "Yes! Thank you!\n",
+      "Game Over\n"
+     ]
+    }
+   ],
    "source": [
     "ask_for_int()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def divide(a, b):\n",
+    "    try:\n",
+    "        output = a / b\n",
+    "    except (TypeError, ZeroDivisionError) as err:\n",
+    "        print('argument type is not int or float or you tried dividing by zero')\n",
+    "    else:\n",
+    "        print(output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "argument type(s) are not int or float or you tried dividing by zero\n"
+     ]
+    }
+   ],
+   "source": [
+    "divide('a', 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "divide(2, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
